# gestao-de-estoque

./: .gitignore  CMakeLists.txt  INSTRUCOES.md  README.md  REQUERIMENTOS.md  estoque  makefile
source/: main.c
source/arquivo/: arquivo.c  arquivo.h
source/menu/: menu.c  menu.h
source/produto/: produto.c  produto.h
source/utils/: utils.c  utils.h
